--- a/SearchAndSelect/searchandselect.html
+++ b/SearchAndSelect/searchandselect.html
@@ -1,5 +1,5 @@
 <div class="searchandselect" ng-class="{ active: showList }">
-    <div class="header" ng-click="show()" class="ui-select-bootstrap">
+    <div class="header-search-and-select" ng-click="show()" class="ui-select-bootstrap">
         <b>{{selecteditem[key]}}</b>
         <span class="pull-right caret" ng:class="{true:'glyphicon-chevron-up', false:'glyphicon-chevron-down'}[showList]"></span>
     </div>
